--- a/Responsive Portfolio Website/index.html
+++ b/Responsive Portfolio Website/index.html
@@ -64,7 +64,7 @@
                     position to leverage skills and knowledge to create
                     responsive websites and application making it user
                     friendly.</p>
-                <a href="images/Shubham_Patil(KH).pdf" target="_blank">Download CV</a>
+                <a href="images/Shubham_Patil_Resume.pdf" target="_blank">Download CV</a>
             </div>
         </div>
     </div>
